new file:   app.js 	new file:   bin/www 	new file:   config/passportConfig.js 	new file:   models/message.js 	new file:   models/user.js 	modified:   package-lock.json 	modified:   package.json
Built app and bin/www to serv as entry point for express.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./bin/www",
+    "dev": "nodemon ./bin/www",
+    "testdb": "node scripts/testDatabase.js",
+    "seed": "node scripts/populateDb.js"
   },
   "repository": {
     "type": "git",
@@ -25,8 +29,12 @@
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "express-validator": "^7.3.0",
+    "method-override": "^3.0.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "pg": "^8.16.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
